--- a/src/client/assets/scss/main.scss
+++ b/src/client/assets/scss/main.scss
@@ -2,8 +2,12 @@
 
 @import './components/components';
 
+@import './modules/modules';
+
 @import '../../../../node_modules/@hawk-ui/table/dist/index.min.css';
 @import '../../../../node_modules/@hawk-ui/input/dist/index.min.css';
 @import '../../../../node_modules/@hawk-ui/button/dist/index.min.css';
 @import '../../../../node_modules/@hawk-ui/loader/dist/index.min.css';
 @import '../../../../node_modules/@hawk-ui/label/dist/index.min.css';
+@import '../../../../node_modules/@hawk-ui/modal/dist/index.min.css';
+@import '../../../../node_modules/@hawk-ui/file-upload/dist/index.min.css';
