add API url in production

--- a/src/client/assets/scss/modules/_dashboard.scss
+++ b/src/client/assets/scss/modules/_dashboard.scss
@@ -25,6 +25,11 @@
       color: $blue-1;
     }
   }
+  &__content {
+    &-img {
+      height: 100px;
+    }
+  }
   &__desc {
     font-size: 14px;
     color: $blue-1;
