add loader and lorem ipsum

--- a/src/client/assets/scss/base/_reset.scss
+++ b/src/client/assets/scss/base/_reset.scss
@@ -45,6 +45,11 @@ ol, ul {
       background: $orange-1 !important;
     }
   }
+  &__spinner {
+    & > div {
+      background-color: $white;
+    }
+  }
 }
 
 .hawk-table .hawk-pagination .hawk-pagination__page {
